src/objects/Promotional_Offer__c.object
<CustomObject>
    <label>Promotional Offer</label>
    <nameField>
        <displayFormat>AMCUPON-{0000}</displayFormat>
        <label>Promotional Offer</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promotional Offers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Promotional Offers</relationshipLabel>
        <relationshipName>Promotional_Offers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Coupon__c</fullName>
        <label>Coupon</label>
        <referenceTo>Coupon__c</referenceTo>
        <relationshipLabel>Promotional Offers</relationshipLabel>
        <relationshipName>Promotional_Offers</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Valid_From__c</fullName>
        <formula>Coupon__r.Valid_From__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Valid_Upto__c</fullName>
        <formula>Coupon__r.Valid_To__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valid Upto</label>
        <type>Date</type>
    </fields>
</CustomObject>